package com.medical.client.event;

public enum ClinicEventType {
    USER_CREATED,
    USER_UPDATED,
    APPOINTMENT_CREATED,
    APPOINTMENT_UPDATED,
    CLINICAL_RECORD_CREATED,
    DATA_REFRESHED
}
