package com.medical.client.event;

public interface ClinicObserver {
    void onEvent(ClinicEvent event);
}
