@startuml ObserverPatternClasses

skinparam classAttributeIconSize 0

' === EVENT TYPES (from com.medical.event) ===
package "com.medical.event" {
  enum ClinicEventType <<enumeration>> #LightBlue;line:Black {
    APPOINTMENT_CREATED
    APPOINTMENT_UPDATED
    APPOINTMENT_CANCELLED
    USER_CREATED
    USER_UPDATED
    USER_DEACTIVATED
    STATUS_MESSAGE
  }
  
  class ClinicEvent <<event>> #LightCyan;line:Black {
    -eventType: ClinicEventType
    -data: Object
    -timestamp: LocalDateTime
    -message: String
  }
}

' === OBSERVER INTERFACE (from com.medical.observer) ===
package "com.medical.observer" {
  interface ClinicObserver <<interface>> #aliceblue;line:blue
}

' === EVENT BUS (from com.medical.event) ===
package "com.medical.event" {
  class ClinicEventBus <<singleton>> #PaleGreen;line:Black {
    -observers: List<ClinicObserver>
    -instance: ClinicEventBus
  }
}

' === RELATIONSHIPS WITH CARDINALITIES ===
ClinicObserver "0..*" --> "0..*" ClinicEventBus : "subscribes to"
ClinicEventBus "1" --> "1" ClinicEvent : "publishes"
ClinicEvent "1" --> "1" ClinicEventType : "has"

note "Observer Pattern for View Synchronization" as N1

@enduml
